<resources>
    <string name="app_name">Mi Band 2</string>

    //Названия кнопок
    <string name="physical_address">Physical Address</string>
    <string name="start_connecting">Start Connecting</string>
    <string name="state">State:</string>
    <string name="battery_info">Battery Info</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="walking_info">Walking Info</string>
    <string name="start_vibrate">Start Vibrate</string>
    <string name="stop_vibrate">Stop Vibrate</string>
    <string name="byte_received">Byte Received:</string>

    //Состояния
    <string name="connecting">Connecting...</string>
    <string name="w">Wait...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disabled">Bluetooth is disabled. Turn on bluetooth and try again.</string>
    <string name="ble_not_supported">Bluetooth Low Energy isn\'t supported on your device. Please update hardware</string>
    <string name="turn">Turn on</string>
    <string name="wrong">Wrong address</string>


</resources>
